# wavetoy.hs

./: .travis.yml  LICENSE  README.md  wavetoy.cabal
app/: Main.hs
src/: VectorSpace.hs  WaveToy1.hs  WaveToy2.hs  WaveToy3.hs  WaveToy4.hs  WaveToyF.hs
test/: Spec.hs
