name:                wavetoy
version:             0.1.0.0
synopsis:            WaveToy in Haskell
description:         Please see README.md
homepage:            https://github.com/eschnett/wavetoy.hs
license:             BSD3
license-file:        LICENSE
author:              Erik Schnetter
maintainer:          schnetter@gmail.com
copyright:           2016 Erik Schnetter
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VectorSpace
                     , WaveToy1
                     , WaveToy2
                     , WaveToy3
                     , WaveToy4
  build-depends:       base >= 4.7 && < 5
                     , array
                     , keys
                     , vector-space
  default-language:    Haskell2010

executable wavetoy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , keys
                     , monad-loops
                     , wavetoy
  default-language:    Haskell2010

test-suite wavetoy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , vector-space
                     , wavetoy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/eschnett/wavetoy.hs
